--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,19 @@ unstable = []
 
 [dev-dependencies]
 with_drop = "0.0.3"
+
+[lints.rust]
+missing_docs = "warn"
+
+[lints.clippy]
+cargo = { level = "warn", priority = -1 }
+nursery = { level = "warn", priority = -1 }
+pedantic = { level = "warn", priority = -1 }
+restriction = { level = "warn", priority = -1 }
+blanket_clippy_restriction_lints = "allow"
+implicit_return = "allow"                       # idiomatic
+semicolon_outside_block = "allow"
+separated_literal_suffix = "allow"
+
+[lints.rustdoc]
+all = "warn"
