--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,13 +7,26 @@ on:
 
 env:
   CARGO_TERM_COLOR: always
+  RUSTFLAGS: --deny warnings
 
 jobs:
-  build_test:
+  build_test_lint:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        toolchain: [stable, nightly]
+        profile: [dev, release]
+        features: ["" , full_expected_cwd, unstable]
     steps:
-    - uses: actions/checkout@v4
-    - name: Build
-      run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
+      - uses: actions/checkout@v4
+      - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
+      - run: cargo build  --profile ${{ matrix.profile }} --no-default-features --features ${{ matrix.features }} --all-targets
+      - run: cargo test   --profile ${{ matrix.profile }} --no-default-features --features ${{ matrix.features }}
+      - run: cargo clippy --profile ${{ matrix.profile }} --no-default-features --features ${{ matrix.features }} --all-targets
+      - run: cargo test   --profile ${{ matrix.profile }} --no-default-features --features ${{ matrix.features }} -- --ignored full_expected_cwd_tests::test_get_expected_inits_expected
+        if: ${{ contains( matrix.features, 'full_expected_cwd' ) }}
+      - run: cargo test   --profile ${{ matrix.profile }} --no-default-features --features ${{ matrix.features }} -- --ignored full_expected_cwd_tests::test_get_inits_expected
+        if: ${{ contains( matrix.features, 'full_expected_cwd' ) }}
+      - run: cargo test   --profile ${{ matrix.profile }} --no-default-features --features ${{ matrix.features }} -- --ignored full_expected_cwd_tests::test_set_inits_expected
+        if: ${{ contains( matrix.features, 'full_expected_cwd' ) }}
+      - run: cargo fmt --check --all
