Added crates.io preferred license format

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ description = "Thread Safe Current Working Directory"
 edition = "2021"
 repository = "https://github.com/G-M0N3Y-2503/current_dir"
 license-file = "LICENSE"
+license = "MIT"
 readme = "README.md"
 keywords = ["async", "cwd", "filesystem", "test", "thread"]
 categories = ["concurrency", "development-tools::testing", "filesystem"]
