--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        toolchain: [stable, nightly]
+        toolchain: [stable, nightly, "1.81"]
         profile: [dev, release]
         features: ["" , full_expected_cwd, unstable, "unstable,full_expected_cwd"]
         exclude:
@@ -24,6 +24,10 @@ jobs:
             toolchain: stable
           - features: "unstable,full_expected_cwd"
             toolchain: stable
+          - features: unstable
+            toolchain: "1.81"
+          - features: "unstable,full_expected_cwd"
+            toolchain: "1.81"
     steps:
       - uses: actions/checkout@v4
       - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }} && rustup component add clippy rustfmt
