--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "current_dir"
-version = "0.1.1"
+version = "0.1.1-dev"
 description = "Thread Safe Current Working Directory"
 edition = "2021"
 repository = "https://github.com/G-M0N3Y-2503/current_dir"
@@ -27,6 +27,7 @@ pedantic = { level = "warn", priority = -1 }
 restriction = { level = "warn", priority = -1 }
 blanket_clippy_restriction_lints = "allow"
 implicit_return = "allow"                       # idiomatic
+pub_with_shorthand = "allow"
 semicolon_outside_block = "allow"
 separated_literal_suffix = "allow"
 
