Added badges to README

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,7 @@ on:
     - cron: '0 0 1 * *' # on the 1st of every month
   pull_request:
     branches: [ "main" ]
+    types: [ "opened", "closed", "reopened", "synchronize" ]
 
 env:
   CARGO_TERM_COLOR: always
@@ -44,3 +45,4 @@ jobs:
         if: ${{ contains( matrix.features, 'unstable' ) && matrix.toolchain == 'nightly' && matrix.profile == 'release' }}
       - run: cargo fmt --check --all
       - run: cargo publish --dry-run
+    if: ${{ !(github.event.pull_request.state == 'closed' && !github.event.pull_request.merged) }}
