--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "current_dir"
-version = "0.1.1-dev"
+version = "0.1.2"
 description = "Thread Safe Current Working Directory"
 edition = "2021"
 repository = "https://github.com/G-M0N3Y-2503/current_dir"
